--- a/src/index.css
+++ b/src/index.css
@@ -55,3 +55,10 @@ body {
 .paginate-link-active {
   color: teal;
 }
+
+/* Input Responsive */
+@media (max-width: 575px) {
+  input[type='text'] {
+    width: 100%;
+  }
+}
